--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,10 +22,10 @@ environment:
 
 dependencies:
   cupertino_icons: ^1.0.2
-  flutter_svg: ^0.22.0
+  dropdown_search: ^1.0.0
   flutter:
     sdk: flutter
-  
+  flutter_svg: ^0.22.0
 
 dev_dependencies:
   flutter_test:
