--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
     sdk: flutter
   flutter_rating_bar: ^4.0.0
   flutter_svg: ^0.22.0
+  fluttertoast: ^8.0.8
   get: ^4.3.8
 
 dev_dependencies:
